--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ body {
 }
 
 #dataviz {
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -27,6 +28,21 @@ body {
 }
 
 .flex-container {
+    width: inherit;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.axis-interaction {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.data-interaction {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -36,4 +52,9 @@ body {
 .flex-item {
     display: flex;
     margin: 5px;
+}
+
+#starPlot {
+    display: flex;
+
 }
