--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 0px;
 }
 
 #myTeam {
@@ -20,7 +21,7 @@ body {
 }
 
 #dataviz {
-    width: 100%;
+    width: 60%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -28,7 +29,6 @@ body {
 }
 
 .flex-container {
-    width: inherit;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -56,10 +56,17 @@ body {
 
 #starPlot {
     display: flex;
-
+    width: 40%;
+    justify-content: center;
+    align-items: center;
 }
 
 .svg-style {
-    display: block;
-    margin: auto;
+    display: flex;
+}
+
+.choosing-players {
+    width: 100%;
+    height: 42vw;
+    display: flex;
 }
