--- a/css/style.css
+++ b/css/style.css
@@ -15,20 +15,8 @@ h1 {
     margin: 10px;
 }
 
-#myTeam {
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-.tooltip {
-    position: absolute;
-    pointer-events: none;
-}
-
-#dataviz {
+/*scatter plot and bar plot style*/
+#choosing-players {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -36,12 +24,13 @@ h1 {
     align-items: center;
 }
 
-.flex-container {
+#scatter-plot {
+    width: 100%;
+    height: 40vw;
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    margin: 10px;
 }
 
 .axis-interaction {
@@ -58,6 +47,58 @@ h1 {
     align-items: center;
 }
 
+.tooltip {
+    position: absolute;
+    pointer-events: none;
+}
+
+/* bar plot style*/
+#barPlot {
+    display: flex;
+    width: 70%;
+    height: 40vw;
+}
+
+#player-analysis {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+#player-vis {
+    width: 0%;
+    height: 40vw;
+}
+
+.bar {
+    fill: #0066b2;
+}
+
+.axisBarPlot {
+    font-size: 13px;
+    color: gray;
+}
+
+.axisBarPlot path,
+.axisBarPlot line {
+    fill: none;
+    display: none;
+}
+
+.label {
+    font-size: 13px;
+}
+
+/*******************/
+
+.flex-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    margin: 10px;
+}
+
 .flex-item {
     display: flex;
     margin: 5px;
@@ -69,28 +110,4 @@ h1 {
 
 .svg-style {
     display: flex;
-}
-
-.choosing-players {
-    width: 100%;
-    height: 42vw;
-    display: flex;
-}
-
-.bar {
-    fill: #5f89ad;
-}
-
-.axisBarPlot {
-    font-size: 13px;
-}
-
-.axisBarPlot path,
-.axisBarPlot line {
-    fill: none;
-    display: none;
-}
-
-.label {
-    font-size: 13px;
 }
