--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
 
 .sidebar {
     width: 18vw;
-    background-color: #D3D3D3;
+    background-color: #dddddd;
     display: none;
     flex-shrink: 0;
     flex-direction: column;
