sidebar style modified

--- a/css/style.css
+++ b/css/style.css
@@ -132,18 +132,14 @@ h1 {
     align-items: center;
 }
 
-.interaction-title h2 {
-    font-size: 1.3rem;
-    font-weight: bold;
-    margin: 7px;
-}
 
 #pick-position {
     color: #36454F;
     background-color: #f0f0f0;
     border: 1px solid;
+    font-size: 1.1vw;
     padding: 0.2em 0.2em 0.2em;
-    width: 6.5vw;
+    width: 8vw;
 }
 
 .tooltip {
